monticore-generator/src/test/resources/cocos/invalid/A4019/A4019.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4019;

grammar A4019 {
  A= ["a" | "A"| "b"];

}
